[gd_scene load_steps=5 format=3 uid="uid://bsapwleuvhn8a"]

[ext_resource type="Script" path="res://src/Utils/place_area.gd" id="1_esg3a"]
[ext_resource type="AudioStream" uid="uid://dc7dre5kqo72f" path="res://assets/Darkworld Audio - Survival Effects [Free]/Tools/Hammer1.wav" id="2_fi7sl"]
[ext_resource type="AudioStream" uid="uid://obeskqbc1mn2" path="res://assets/Breviceps/450616__breviceps__8-bit-error.wav" id="3_0q3qd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_487mj"]

[node name="PlaceArea" type="Area2D"]
script = ExtResource("1_esg3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_487mj")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="BuildPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fi7sl")
bus = &"Sound"

[node name="ErrorPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0q3qd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
